--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ festejos-29/10</h3>
      <script type="text/html" id="template">
             <div class="col-md-3 col-sm-6">
                                           <div class="blog-item ">
-                                              <div class="blog-image">
+                                              <div class="">
                                                   <img src="http://www.agenciabelem.com.br/Resize/CreateThumbnail?path=/multimidiaSGN/galeria/{{:id_galeria}}/{{:nome_foto}}&maxHeight=170&maxWidth=270" class="attachment-medium wp-post-image" alt="bloghome4" />
                                               </div>
                                               <div class="blog-description">
