--- a/index.html
+++ b/index.html
@@ -497,12 +497,12 @@ festejos-29/10</h3>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 footerattr">
-                            <aside id="contact_info-2" class="widget_contact_info widget">
-                                <h3 class="module-title title-widget"><span>LOCATION</span></h3>
-                                <div class="tzwidget-contact">
-                                    <address> London, UK, 10, Friks Avenue </address>
-                                    <span> +0987 092 291 091 </span>
-                                    <span class="wemail">info@everline.com</span>
+                            <aside id="widget_logo-2" class="widget_widget_logo widget">
+                                <div class="tz_logo_widget" style="padding: 80px 0 0 0">
+                                    <a href="#">
+                                        <img src="images/logo_belem.png" alt="Everline">
+                                    </a>
+                                   
                                 </div>
                             </aside>
                         </div>
@@ -512,18 +512,18 @@ festejos-29/10</h3>
                                     <a href="#">
                                         <img src="images/EverlineTheme.png" alt="Everline">
                                     </a>
-                                    <p>All right server. Copyright by  TemPlaza.com</p>
+                                    <p>Todos os direitos reservados. Prefeitura de Belém</p>
                                 </div>
                             </aside>
                         </div>
                         <div class="col-md-4 footerattr">
                             <aside id="tz_social-2" class="widget_tz_social widget">
-                                <h3 class="module-title title-widget"><span>GET IN TOUCH</span></h3>
+                                <h3 class="module-title title-widget"><span>Redes Sociais</span></h3>
                                 <div class="tz_social">
-                                    <a href="#" class="fa fa-facebook"></a>
-                                    <a href="#" class="fa fa-google-plus"></a>
-                                    <a href="#" class="fa fa-twitter"></a>
-                                    <a href="#" class="fa fa-youtube"></a>
+                                    <a href="http://www.facebook.com" class="fa fa-facebook"></a>
+                                    <a href="http://plus.google.com"  class="fa fa-google-plus"></a>
+                                    <a href="http://twitter.com" class="fa fa-twitter"></a>
+                                    <a href="http://youtube.com" class="fa fa-youtube"></a>
                                 </div>
                             </aside>
                         </div>
