--- a/noticia.html
+++ b/noticia.html
@@ -165,8 +165,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="tzblog-img">
-                            <img src="http://www.agenciabelem.com.br/Resize/CreateThumbnail?path=/multimidiaSGN/galeria/{{:id_galeria}}/{{:nome_foto}}&maxHeight=400&maxWidth=1170" alt="IMAGE POST">
+                        <div class="thumbnail">
+
+                            <img class="img-responsive portrait" src="http://www.agenciabelem.com.br/Resize/CreateThumbnail?path=/multimidiaSGN/galeria/{{:id_galeria}}/{{:nome_foto}}&maxHeight=1000&maxWidth=2000" width="1170" alt="IMAGE POST">
                         </div>
                         <h2 class="single-title">{{:titulo}}</h2>
                         <span class="single-meta">
