Audios Pagina Inicial

--- a/noticia.html
+++ b/noticia.html
@@ -56,7 +56,7 @@
         <header class="tz-header tz-header-page" style="height: 85px">
             <div class="container" style="margin: -50px 0 0 0">
                 <h3 class="tzlogo pull-left">
-                    <a class="pull-left tz_logo" style="margin-left: 120px;" href="#" title="Everline">
+                    <a class="pull-left tz_logo" style="margin-left: 120px;" href="index.html" title="Everline">
                         <img class="logo_lager" src="images/Everline_logo.png" height="64" alt="Everline" />
                     </a>
                 </h3>
