--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                     },
                     {
                         title:"Tudo Num Ser Só",
-                        mp3: "CLIPE TUDO NUM SER SO.ogg"
+                        mp3: "audio/CLIPE TUDO NUM SER SO.ogg"
                       
                     },
                     {
