--- a/index.html
+++ b/index.html
@@ -526,46 +526,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="vc_col-sm-12 vc_col-lg-6 vc_col-md-12 wpb_column vc_column_container ">
+                        <div class="vc_col-sm-12 vc_col-lg-6 vc_col-md-12 wpb_column vc_column_container " style="background-color: #2F326B; padding: 50px">
                             <div class="wpb_wrapper">
                                 <div class="wpcf7" id="wpcf7-f59-p13-o1" lang="en-US" dir="ltr">
-                                    <div class="screen-reader-response"></div>
-                                    <form name="" action="#" method="post" class="wpcf7-form" novalidate="novalidate">
-                                        <div class="form7-wrap">
-                                            <div class="form7-logo">
-                                                <img class="logo_form" src="images/logo-contact.png" alt="logo" />
-                                            </div>
-                                            <div class="content-form7">
-                                                <div class="form7-item">
-                                                    <label>Name: </label>
-                                                    <span class="wpcf7-form-control-wrap your-name">
-                                                        <input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" />
-                                                    </span>
-                                                </div>
-                                                <div class="form7-item">
-                                                    <label>GUEST: </label>
-                                                    <span class="wpcf7-form-control-wrap your-guest">
-                                                        <input type="text" name="your-guest" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" />
-                                                    </span>
-                                                </div>
-                                                <div class="form7-item your-event">
-                                                    <label>EVENT: </label>
-                                                    <span class="wpcf7-form-control-wrap your-event">
-                                                        <select name="your-event:" class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required" aria-required="true" aria-invalid="false">
-                                                            <option value="Ceremony">Ceremony</option>
-                                                            <option value="Safari">Safari</option>
-                                                            <option value="Opera">Opera</option>
-                                                            <option value="Lynx">Lynx</option>
-                                                        </select>
-                                                    </span>
-                                                </div>
-                                                <div class="form7submit">
-                                                    <input type="submit" value="JOIN US" class="wpcf7-form-control wpcf7-submit" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="wpcf7-response-output wpcf7-display-none"></div>
-                                    </form>
+                                    <iframe width="680" height="230" src="https://www.youtube.com/embed/muyQMnJkmAQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
