--- a/index.html
+++ b/index.html
@@ -688,8 +688,8 @@
       
        
         <script>
-            jQuery(function () { var a = buscaAPI('http://api.sgn.net.br/Api/Noticia/5?dataIni=&dataFim=&idOrgao=&termo=&filtro=&itens=4&page=1&order=asc', "templateTimeLine", "tl1"); })
+            jQuery(function () { var a = buscaAPI('http://api.sgn.net.br/Api/Noticia/5?dataIni=&dataFim=&idOrgao=&termo=&filtro=&itens=100&order=asc', "templateTimeLine", "tl1"); })
     jQuery(function () { var a = buscaAPI('http://api.sgn.net.br/Api/Noticia/3?dataIni=&dataFim=&idOrgao=&termo=&filtro=&itens=4&page=1', "template", "noticias"); })
         </script>
     </body>
-</html>
+</html> 
