--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
         </script>
         <script type="text/html" id="templateTimeLine">
             <div class="item" data-id="{{:~formataDataSemHora(data_pub)}}" data-description="{{:titulo}}" data-count="0" style="padding-left: 0px; padding-right: 0px; margin-left: 5px; margin-right: 5px; float: left; position: relative; -webkit-user-select: none;">
-                <div class="">
+             {{if id_galeria != 0}}   <div class="">
                     <a class="image_rollover_bottom con_borderImage" data-description="ZOOM IN" href="http://www.agenciabelem.com.br/multimidiaSGN/galeria/{{:id_galeria}}/{{:nome_foto}}" rel="lightbox[timeline]" style="-webkit-user-select: none;">
                         <img src="http://www.agenciabelem.com.br/Resize/CreateThumbnail?path=/multimidiaSGN/galeria/{{:id_galeria}}/{{:nome_foto}}&maxHeight=230&maxWidth=430" class="" height="230">
 
@@ -653,6 +653,16 @@
                         <div class="image_roll_zoom" style="left: 0px; top: 100%; -webkit-user-select: none;"></div>
                     </a>
                 </div>
+                {{else}}
+                <div class="">
+                    <a class="image_rollover_bottom con_borderImage" data-description="ZOOM IN" href="http://www.agenciabelem.com.br/multimidiaSGN/galeria/{{:id_galeria}}/{{:nome_foto}}" rel="lightbox[timeline]" style="-webkit-user-select: none;">
+                        <img src="images/eventoDefault.png" class="" height="230">
+
+                        <div class="image_roll_glass" style="-webkit-user-select: none;"></div>
+                        <div class="image_roll_zoom" style="left: 0px; top: 100%; -webkit-user-select: none;"></div>
+                    </a>
+                </div>
+                {{/if}}
                 <h2 style="-webkit-user-select: none;">{{:~format(data_pub)}}</h2>
                 <span style="-webkit-user-select: none;">{{:titulo}}</span>
                 <div class="read_more" data-id="{{:~formataDataSemHora(data_pub)}}" data-count="0" style="-webkit-user-select: none;">Ver Evento</div>
