--- a/_menu.html
+++ b/_menu.html
@@ -2,7 +2,7 @@
             
                             <ul id="menu-primary" class="tz-menu nav-collapse themeple_megemenu">
                                 <li id="menu-item-102" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-has-children">
-                                    <a href="index.html">Calendário</a>
+                                    <a href="index.html">Agenda</a>
 
                                 </li>
                                 <li id="menu-item-397" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor menu-item-has-children">
