Time Line e Multimidia

--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@
                             </div>
                         </div>
                     </div>
-            <div class="vc_row wpb_row vc_row-fluid vc_custom_1423198729821">
+         
+            <div class="vc_row wpb_row vc_row-fluid" style="background-color:#2F326B; padding: 30px">
                 <div class="container">
                     <div class="row">
                         <div class="vc_col-sm-12 vc_col-lg-6 vc_col-md-12 wpb_column vc_column_container ">
@@ -540,10 +541,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="vc_col-sm-12 vc_col-lg-6 vc_col-md-12 wpb_column vc_column_container " style="background-color: #2F326B; padding: 50px">
+                        <div class="vc_col-sm-12 vc_col-lg-6 vc_col-md-12 wpb_column vc_column_container " style="background-color: #2F326B; padding: 0">
                             <div class="wpb_wrapper">
                                 <div class="wpcf7" id="wpcf7-f59-p13-o1" lang="en-US" dir="ltr">
-                                    <iframe width="680" height="230" src="https://www.youtube.com/embed/muyQMnJkmAQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                                    <iframe width="680" height="265" src="https://www.youtube.com/embed/4BXJrAgNSs0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
@@ -651,7 +652,7 @@
                     <div class="blog-description">
                         <h2 >{{:~format(data_pub)}}</h2>
                         <h3 style="padding: 16px; text-align: -webkit-center;" ><a>{{:titulo.toUpperCase()}}</a></h3>
-                        <div class="read_more" data-id="{{:~formataDataSemHora(data_pub)}}" data-count="0" style="margin:0 35% 0 35%">Ver Evento</div>
+                        <div class="read_more" data-id="{{:~formataDataSemHora(data_pub)}}" data-count="0" style="margin:0 30% 0 30%">[+] Mais</div>
                     </div>
                 </div>
                 </div>
