--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                 <div class="blog-item ">
                     <div class="blog-description">
                         <h2 >{{:~format(data_pub)}}</h2>
-                        <h3 style="padding: 16px; text-align: -webkit-center;" ><a>{{:titulo.toUpperCase()}}</a></h3>
+                        <div style="height: 140px"> <h3 style="padding: 16px; text-align: -webkit-center;"><a>{{:titulo.toUpperCase()}}</a></h3></div>
                         <div class="read_more" data-id="{{:~formataDataSemHora(data_pub)}}" data-count="0" style="margin:0 30% 0 30%">[+] Mais</div>
                     </div>
                 </div>
