--- a/evento.html
+++ b/evento.html
@@ -168,7 +168,8 @@
 
                         </span>
                         <div class="single-content">
-                            {{:texto}}
+                           Local: {{:local}}<br />
+                            Detalhamento: {{:texto}}
                            
                         </div>
                       
