--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                                  data-endelementdelay="0.1"
                                                  data-endspeed="400"
                                                  data-endeasing="Power0.easeOut">
-                                                Fafá de Belém
+                                                Aniversário de Belém
                                             </div>
                                             <!-- LAYER NR. 3 -->
                                             <div class="tp-caption sfr str"
@@ -230,7 +230,7 @@
                                                  data-endelementdelay="0.1"
                                                  data-endspeed="400"
                                                  data-endeasing="Power4.easeOut">
-                                                24 de Outubro, 2015 NO HANGAR
+                                               11 de janeiro, Portal da Amazônia
                                             </div>
                                             <!-- LAYER NR. 6 -->
                                             <div class="tp-caption slider_dateevent customin customout tp-resizeme"
@@ -247,7 +247,7 @@
                                                  data-endelementdelay="0.1"
                                                  data-endspeed="400"
                                                  data-endeasing="Power4.easeOut">
-                                                <a href='#' class="tzbtn_slider">Veja o Evento</a>
+                                                <a href='/evento.html?id=23' class="tzbtn_slider">Veja o Evento</a>
                                             </div>
                                         </li>
                                         <!-- SLIDE  -->
