--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                         <!-- SLIDE  -->
                                         <li data-transition="fade" data-slotamount="7" data-masterspeed="600" data-saveperformance="off">
                                             <!-- MAIN IMAGE -->
-                                            <img src="images/fade1.png" alt="everline" data-bgposition="center top" data-kenburns="on" data-duration="9000" data-ease="Linear.easeNone" data-bgfit="100" data-bgfitend="110" data-bgpositionend="center center">
+                                            <img src="images/fade1.jpg" alt="everline" data-bgposition="center top" data-kenburns="on" data-duration="9000" data-ease="Linear.easeNone" data-bgfit="100" data-bgfitend="110" data-bgpositionend="center center">
                                             <!-- LAYERS -->
                                             <!-- LAYER NR. 1 -->
                                             <div class="tp-caption tztitle-slider sfr stl tp-resizeme"
@@ -157,7 +157,7 @@
                                         <!-- SLIDE  -->
                                         <li data-transition="fade" data-slotamount="7" data-masterspeed="600" data-saveperformance="off">
                                             <!-- MAIN IMAGE -->
-                                            <img src="images/fade2.png" alt="home121" data-bgposition="center top" data-kenburns="on" data-duration="10000" data-ease="Power0.easeIn" data-bgfit="110" data-bgfitend="100" data-bgpositionend="center center">
+                                            <img src="images/fade2.jpg" alt="home121" data-bgposition="center top" data-kenburns="on" data-duration="10000" data-ease="Power0.easeIn" data-bgfit="110" data-bgfitend="100" data-bgpositionend="center center">
                                             <!-- LAYERS -->
                                             <!-- LAYER NR. 1 -->
                                             <div class="tp-caption customin customout"
@@ -253,7 +253,7 @@
                                         <!-- SLIDE  -->
                                         <li data-transition="fade" data-slotamount="7" data-masterspeed="600" data-saveperformance="off">
                                             <!-- MAIN IMAGE -->
-                                            <img src="images/fade3.png" alt="home212" data-bgposition="center top" data-kenburns="on" data-duration="10000" data-ease="Power0.easeIn" data-bgfit="100" data-bgfitend="110" data-bgpositionend="center center">
+                                            <img src="images/fade3.jpg" alt="home212" data-bgposition="center top" data-kenburns="on" data-duration="10000" data-ease="Power0.easeIn" data-bgfit="100" data-bgfitend="110" data-bgpositionend="center center">
                                             <!-- LAYERS -->
                                             <!-- LAYER NR. 1 -->
                                             <div class="tp-caption tztitle-slider sfr stl tp-resizeme"
