--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                             </div>
 
 
-
+                                             
                                         </li> 
                                         <!-- SLIDE  -->
                                         <li data-transition="fade" data-slotamount="7" data-masterspeed="600" data-saveperformance="off">
@@ -610,6 +610,7 @@
                                                     <span>{{:titulo}}</span>
                                                 </a>
                                             </div>
+                                            <div style="width: 100%;  text-align:center;">{{:~formatSoComHora(data)}}</div>
                                             <div class="" data-id="{{:~formataDataSemHora(data)}}" data-count="0" style="text-align: center; padding-top:2px"><a style="font-size:12px;  color: #2F326B; text-decoration: none;" href="evento.html?id={{:id}}">Leia Mais</a></div>
                                         </div>
                                     </div>
