--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
             </div>
         </div>
-        <div class="vc_row wpb_row vc_row-fluid">
+        <!--<div class="vc_row wpb_row vc_row-fluid">
             <div class="nocontainer">
                 <div class="vc_col-sm-12 wpb_column vc_column_container ">
                     <div class="wpb_wrapper">
@@ -474,7 +474,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
 
 
         <div class="vc_row wpb_row vc_row-fluid vc_custom_1423134011704">
