Interna de Galeria

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                                 <div class="col-md-3 col-sm-6">
                                     <div class="blog-item item-galeria">
                                         <div class="">
-                                            <a href="">
+                                            <a href="/galeria.html?id={{:id_galeria}}">
                                                 <img width="255" src="http://www.agenciabelem.com.br/Resize/CreateThumbnail?path=/multimidiaSGN/galeria/{{:id_galeria}}/{{:nome}}&maxHeight=170&maxWidth=270" class="attachment-medium wp-post-image" alt="bloghome4" />
                                                 <span class="descricao" style="background-color:#000; color:#fff; opacity:0.65;
 	-moz-opacity: 0.65;
