--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                                         <div class="blog-description">
                                             <h2>{{:~formatTimeLine(data)}} <span>{{:~getAnoData(data)}}</span></h2>
                                             <div style="height: 160px; padding:10px; text-align:center;">
-                                                <a href="evento.html?id={{:id}}">
+                                                <a class="atimeLine" href="evento.html?id={{:id}}">
                                                     <span>{{:titulo}}</span>
                                                 </a>
                                             </div>
