--- a/_footer.html
+++ b/_footer.html
@@ -24,10 +24,10 @@
             <aside id="tz_social-2" class="widget_tz_social widget">
                 <h3 class="module-title title-widget"><span>Redes Sociais</span></h3>
                 <div class="tz_social">
-                    <a href="http://www.facebook.com" class="fa fa-facebook"></a>
-                    <a href="http://plus.google.com" class="fa fa-google-plus"></a>
-                    <a href="http://twitter.com" class="fa fa-twitter"></a>
-                    <a href="http://youtube.com" class="fa fa-youtube"></a>
+                    <a href="http://www.facebook.com/PrefeituraBelem/" class="fa fa-facebook"></a>
+                    <a href="https://plus.google.com/u/0/103043099649506260555/about" class="fa fa-google-plus"></a>
+                    <a href="https://twitter.com/prefeiturabelem" class="fa fa-twitter"></a>
+                    <a href="https://www.youtube.com/user/prefeituramunicipalb" class="fa fa-youtube"></a>
                 </div>
             </aside>
         </div>
