--- a/_menu.html
+++ b/_menu.html
@@ -16,28 +16,9 @@
 
                                 </li>
                                 <li id="menu-item-279" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
-                                    <a href="#">Memorias</a>
+                                    <a href="#">Memórias</a>
 
                                 </li>
                              
                             </ul>
-                      <script>
-                          jQuery(function () { 
-
-                              jQuery('a[href^="#"]').on('click', function (e) {
-                                  e.preventDefault();
-
-                                  var target = this.hash;
-                                  $target = jQuery(target);
-
-                                  jQuery('html, body').stop().animate({
-                                      'scrollTop': $target.offset().top
-                                  }, 900, 'swing', function () {
-                                      window.location.hash = target;
-                                  });
-                                  return false;
-                              });
-        });
-
- 
-                      </script>
+                     
