--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                     <div class="vc_col-sm-12 wpb_column vc_column_container ">
                         <div class="wpb_wrapper">
                             <div class="container-custom">
-                                <h2 class="elementblog-title elementblog-title2">NOTICIAS</h2>
+                                <h2 class="elementblog-title elementblog-title2">NOTÍCIAS</h2>
                                 <div class="row" id="noticias">
 
                                 </div>
@@ -500,7 +500,7 @@
                     <div class="vc_col-sm-12 wpb_column vc_column_container ">
                         <div class="wpb_wrapper">
                             <div class="container-custom">
-                                <h2 class="elementblog-title elementblog-title2" style="color:#fff !important">MULTIMIDIA</h2>
+                                <h2 class="elementblog-title elementblog-title2" style="color:#fff !important">MULTIMÍDIA</h2>
                                 <div class="row" id="galerias">
 
                                 </div>
