--- a/galeria.html
+++ b/galeria.html
@@ -81,7 +81,7 @@
                 <input type="submit" class="submit" name="submit" id="searchsubmit" value="Search" />
             </form>
         </div>
-        <div class="single_post">
+        <div class="single_post" style="padding: 32px 96px 1px 63px !important; ">
             <div class="container">
                 <div class="row">
                     <div class="col-md-2"></div>
