--- a/_menu.html
+++ b/_menu.html
@@ -19,6 +19,10 @@
                                     <a href="#">Memórias</a>
 
                                 </li>
+                                <li id="menu-item-279" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
+                                    <a href="/downloads.html">Downloads </a>
+
+                                </li>
                              
                             </ul>
                      
