--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <div class="wpb_revslider_element wpb_content_element">
                             <!-- START REVOLUTION SLIDER 4.6.0 fullscreen mode -->
                             <div id="rev_slider_3_1_wrapper" class="rev_slider_wrapper fullscreen-container">
-                                <div id="rev_slider_3_1" class="rev_slider fullscreenbanner">
+                                <div <!--id="rev_slider_3_1"--> class="rev_slider fullscreenbanner">
                                     <ul>
                                         <!-- SLIDE  -->
                                         <li data-transition="fade" data-slotamount="7" data-masterspeed="600" data-saveperformance="off">
@@ -619,7 +619,7 @@
                                                     <span>{{:titulo}}</span>
                                                 </a>
                                             </div>
-                                            <div style="width: 100%;  text-align:center;">{{:~formatSoComHora(data)}}</div>
+                                            <div style="width: 100%;  text-align:center; font-weight:bold">{{:~formatSoComHora(data)}}</div>
                                             <div class="" data-id="{{:~formataDataSemHora(data)}}" data-count="0" style="text-align: center; padding-top:2px"><a style="font-size:12px;  color: #2F326B; text-decoration: none;" href="evento.html?id={{:id}}">Leia Mais</a></div>
                                         </div>
                                     </div>
