correção na tag do slider

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <div class="wpb_revslider_element wpb_content_element">
                             <!-- START REVOLUTION SLIDER 4.6.0 fullscreen mode -->
                             <div id="rev_slider_3_1_wrapper" class="rev_slider_wrapper fullscreen-container">
-                                <div id="rev_slider_3_1"> class="rev_slider fullscreenbanner">
+                                <div id="rev_slider_3_1" class="rev_slider fullscreenbanner">
                                     <ul>
                                         <!-- SLIDE  -->
                                         <li data-transition="fade" data-slotamount="7" data-masterspeed="600" data-saveperformance="off">
