titulo da agendA

--- a/index.html
+++ b/index.html
@@ -350,15 +350,16 @@
                 </div>
             </div>
         </div>
-        <div class="vc_row wpb_row vc_row-fluid vc_custom_1423134011704">
-            <div class="container">
-                <div class="row">
+        <div class="vc_row wpb_row vc_row-fluid vc_custom_1423134011704" id="agenda">
+            <div class="container" >
+                <div class="row"  >
                     <div class="vc_col-sm-12 wpb_column vc_column_container ">
                         <div class="wpb_wrapper">
                             <div class="container-custom">
+                                <h3 class="title_ourstory">AGENDA BELÉM 400 ANOS</h3>
 
                                 <div id="" class="timelineLoader" style="display: none;">
-                                    <img src="/js/timeline/loadingAnimation.gif" />
+                                    <img src="/js/timeline/loadingAnimation.gif"/>
 
                                 </div>
                                 <!-- BEGIN TIMELINE -->
@@ -525,7 +526,7 @@
                                 <div class="row" id="galerias">
 
                                 </div>
-                                <div id="agenda"></div>
+                              
                             </div>
                         </div>
                     </div>
