--- a/downloads.html
+++ b/downloads.html
@@ -88,7 +88,7 @@
                     <div class="col-md-8">
 
 
-                        <h2 id="titulo" class="single-title"></h2>
+                        <h3>Donwloads</h3>
                      <table>
                          <tr>
                              <th>
