--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 <html class="ie ie8" lang="en-US">
 <![endif]-->
 <!--[if !(IE 7) | !(IE 8)  ]><!-->
-<html lang="en-US">
+<html>
 <!--<![endif]-->
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="iso-8859-1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Just another WordPress site" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -603,6 +604,7 @@
                                 </div>
 
                             </script>
+
                             <script type="text/html" id="templateTimeLine">
                                 <div class="item" data-id="{{:~formataDataSemHora(data)}}" data-description="{{:titulo}}" data-count="0" style="padding-left: 0px; padding-right: 0px; margin-left: 5px; margin-right: 5px; float: left; position: relative; -webkit-user-select: none;height: 250px">
 
