--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                     <div class="wpb_wrapper">
                         <div class="tzourstory">
                             <div class="container">
-                                <h3 class="title_ourstory">SUA HISTORIA</h3>
+                                <h3 class="title_ourstory">SUA HISTÓRIA</h3>
                                 <div class="ourstory_content">
                                     <p>  Belém é um município brasileiro e capital do estado do Pará. Pertencente à Mesorregião Metropolitana de Belém e à Microrregião de Belém,[11] localiza-se na Região Norte do Brasil, distante 2 140 quilômetros da capital federal, Brasília.[5] sua área é de 1 064,918 km².</p>
                                     <p>Com uma população de 1 439 561 habitantes, é a segunda cidade mais populosa da Região Norte e a décima-primeira do Brasil. Possuindo um dos maiores Índices de Desenvolvimento Humano (IDH) entre os municípios do norte brasileiro. Nas últimas duas décadas, vem se verticalizando a partir das áreas mais altas e mais valorizadas, devido novas tendências na construção civil local e o plano de valorização do espaço da cidade originada na década de 40 na Avenida Presidente Vargas. Têm se verificado: o aumento das densidades construídas e a elevação acentuada da altura dos edifícios; novas modalidades de seletividade social, caracterizadas por arrojados projetos arquitetônicos; a incorporação de sofisticados equipamentos de lazer na área condominial; os altos preços dos imóveis. Parece estar se delineando, portanto, uma tendência à segregação sócio-espacial para segmentos sociais de alta classe e de alta classe média. [12]</p>
