--- a/index.html
+++ b/index.html
@@ -379,11 +379,38 @@
                     <div class="wpb_wrapper">
                         <div class="tzourstory">
                             <div class="container">
-                                <h3 class="title_ourstory">SUA HISTORIA</h3>
+                                <h3 class="title_ourstory">Belém: 400 anos de muitas histórias</h3>
                                 <div class="ourstory_content">
-                                    <p>  Belém é um município brasileiro e capital do estado do Pará. Pertencente à Mesorregião Metropolitana de Belém e à Microrregião de Belém,[11] localiza-se na Região Norte do Brasil, distante 2 140 quilômetros da capital federal, Brasília.[5] sua área é de 1 064,918 km².</p>
-                                    <p>Com uma população de 1 439 561 habitantes, é a segunda cidade mais populosa da Região Norte e a décima-primeira do Brasil. Possuindo um dos maiores Índices de Desenvolvimento Humano (IDH) entre os municípios do norte brasileiro. Nas últimas duas décadas, vem se verticalizando a partir das áreas mais altas e mais valorizadas, devido novas tendências na construção civil local e o plano de valorização do espaço da cidade originada na década de 40 na Avenida Presidente Vargas. Têm se verificado: o aumento das densidades construídas e a elevação acentuada da altura dos edifícios; novas modalidades de seletividade social, caracterizadas por arrojados projetos arquitetônicos; a incorporação de sofisticados equipamentos de lazer na área condominial; os altos preços dos imóveis. Parece estar se delineando, portanto, uma tendência à segregação sócio-espacial para segmentos sociais de alta classe e de alta classe média. [12]</p>
-                                </div>
+                                   
+
+                                    <p>“Belém Belém, és minha bandeira, és a flor que cheira no Grão-Pará”</p>
+                                    <p>(Chico Senna)</p>
+
+                                    <p>Não podemos falar de Belém, nem da importância de comemorar seus 400 anos, sem relembrar um pouco da história dessa nossa cidade Morena. Nos idos tempos de 1616, na região que até então era habitada pelo bravo povo tupinambá, é onde começa esta jornada. Mais precisamente no dia 12 de janeiro daquele ano, Francisco Caldeira Castelo Branco, fundou o Forte do Castelo do Senhor Santo Cristo do Presépio de Belém, um ponto estratégico fundamental na conquista da foz do Rio Amazonas por parte de Portugal.</p>
+                                    <p> O povoado que se formou ao redor do forte, conhecido por todos nós hoje como Forte do Castelo, chamou-se, inicialmente, Feliz Lusitânia. Com o tempo foi recebendo outros nomes como Santa Maria do Grão Pará, Santa Maria de Belém do Grão Pará e finalmente Belém do Pará, a primeira capital da Amazônia.</p>
+                                    <p>
+                                        Dada a sua importância, ainda no início do século XVIII, Belém se preparou para receber a corte portuguesa que estava mudando para o Brasil, o que alteraria completamente os rumos de nossa história, mas a família real decidiu estabelecer-se no Rio de Janeiro.
+                                    </p>
+                                    <p>
+                                        Com a emancipação política do Brasil, em 1822, o Grão-Pará vivia um clima tenso, pois havia uma grande distância das decisões políticas do sul do país, ainda fortemente ligada a Portugal. Fazendo com que Belém só viesse a reconhecer a independência do Brasil quase um ano após sua proclamação, mais precisamente em 15 de agosto de 1823, data em que celebramos, anualmente, a Adesão do Pará a Independência.
+                                    </p>
+                                    <p>
+                                        A independência do país, contudo, não traz grandes mudanças na estrutura econômica e nem modifica as más condições em que vivia a maior parte da população, composta de índios, negros e mestiços. Então, no ano de 1835, explode na cidade um sangrento movimento popular independentista: A Cabanagem, que durou até 1840.
+                                    </p>
+                                    <p>
+                                        Esse panorama econômico viria a mudar com a chamada Era da Borracha. O apogeu do Ciclo da Borracha ocorreu entre os anos de 1890 e 1920, quando a cidade contava até mesmo com tecnologias que capitais do sul e sudeste do país nem mesmo sonhavam. Foram momentos de luxo e glamour, quando Belém chegou a ser conhecida como a Paris N’América.
+                                    </p>
+                                    <p>
+                                        Durante esse período de esplendor foram construídos importantes símbolos de nossa cidade como o Teatro da Paz, o Cine Olympia, o cinema mais antigo em atividade no Brasil, o Palácio Antônio Lemos, atual sede da Prefeitura de Belém, e um dos nossos cartões postais mais famosos, o Ver-o-Peso, maior feira a Céu aberto da América Latina.
+                                    </p>
+                                    <p>
+                                        Belém é mundialmente conhecida por sediar uma das maiores manifestações da fé católica do mundo: o Círio de Nossa Senhora de Nazaré. Realizado sempre no segundo domingo de outubro, Belém se cobre de cores, ritmos, sabores e fé, famílias inteiras se reúnem para saudar a Padroeira dos Paraenses, e depois saborear um almoço recheado de deliciosas comidas típicas.
+                                    </p>
+                                    
+                                    <p> Falando em comidas típicas, recentemente Belém recebeu da Unesco o título de Cidade da Gastronomia, uma premiação que enche de orgulho nossa cidade não só pelo merecido reconhecimento de nossa culinária regional, mas porque simboliza o compromisso da cidade em promover a criatividade local e a diversidade cultural, que é uma das missões da Unesco.</p>
+                                    <p> Cidade das mangueiras, cidade morena, da chuva da tarde, cidade dos ritmos, da gastronomia... Ah! Belém, são tantos os motivos pelos quais te lembramos e queremos bem. Nos teus 400 anos só podemos te desejar mais 400, 800, 1000 anos de lutas, de vitórias, de conquistas, da simpatia, da alegria desse povo de tantas histórias que faz de ti o quê tu és: Belém.</p>
+
+</div>
                             </div>
                         </div>
                     </div>
